--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 	</head>
 
 	<body>
+        <!-- Page Preloder -->
+        <div id="preloader">
+            <div class="loader"></div>
+            <p>Loading...</p>
+        </div>    
 		<!--HEADER-->
         <!-- Header w/Navbar -->
         <header class="header-area overlay">
@@ -99,7 +104,7 @@
         <section id="brand-carousel">
             <div class="container">
              <div class="row">
-                <h5>NOS ACOMPAÑAN</h5>
+                <h5>Chequeá estos estilos</h5>
                  <div class="container">
                  <div class="owl2 owl-carousel owl-theme carousel-container">
                  <div class="item-container d-flex align-items-center">
