--- a/servicios.html
+++ b/servicios.html
@@ -40,6 +40,11 @@
 	</head>
 
 	<body>
+        <!-- Page Preloder -->
+        <div id="preloader">
+            <div class="loader"></div>
+            <p>Loading...</p>
+        </div> 
 		<!--HEADER-->
         <!-- Header w/Navbar -->
         <header class="header-area overlay">
@@ -69,7 +74,7 @@
                 <img src="./images/header_banner.jpg" alt="header_banner">
                 <h1>SERVICIOS</h1>
             </section>
-            <section id="contacto">
+            <section id="servicios">
 				<div class="container g-py-50 g-py-100--md"> 
 					<div class="row no-gutters">
 						<div class="col-sm-6 col-md-5">
