--- a/reservas.html
+++ b/reservas.html
@@ -40,6 +40,11 @@
 	</head>
 
 	<body>
+        <!-- Page Preloder -->
+        <div id="preloader">
+            <div class="loader"></div>
+            <p>Loading...</p>
+        </div>         
 		<!--HEADER-->
         <!-- Header w/Navbar -->
         <header class="header-area overlay">
