--- a/nosotros.html
+++ b/nosotros.html
@@ -50,7 +50,9 @@
         <header class="header-area overlay">
             <nav class="navbar bg-black navbar-expand-md navbar-dark">
                 <div class="container">
-                    <img src="./images/cooltext377843177227709.png" class="navbar-logo" alt="salone_logo">
+                    <a href="index.html">
+                        <img src="./images/cooltext377843177227709.png" class="navbar-logo" alt="salone_logo">
+                    </a>
                     <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
                         <span class="menu-icon-bar"></span>
                         <span class="menu-icon-bar"></span>
@@ -111,12 +113,20 @@
 	
 	<section id="colecciones" class="mt-5">
 		<h2 class="h3 text-uppercase g-font-weight-600 u-heading-v2__title text-center">Colecciones</h2>
-		<div class="container owl-carousel owl-theme">
-			<div> <img src="./images/Summer.JPG"> </div>
-			<div> <img src="./images/Winter.JPG"> </div>
-			<div> <img src="./images/Autumn.JPG"> </div>
-			<div> <img src="./images/Spring.JPG"> </div>
-			<div> <img src="./images/Clientes.JPG"> </div>
+		<div class="owl2 owl-carousel owl-theme carousel-container">
+            <div class="item-container d-flex align-items-center">
+                <img src="./images/Clientes.JPG" class="slider-image" alt="dtswiss_logo">
+             </div>
+             <div class="item-container d-flex align-items-center">
+                <img src="./images/Spring.JPG" class="slider-image" alt="garmin_logo">
+             </div>
+             <div class="item-container d-flex align-items-center">
+                <img src="./images/Summer.JPG" class="slider-image" alt="magenta_logo">
+             </div>
+             <div class="item-container d-flex align-items-center">
+                <img src="./images/Winter.JPG" class="slider-image" alt="maxxis_logo">
+             </div>
+
 		</div>
 	</section>
 	
