--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <header class="header-area overlay">
             <nav class="navbar bg-black navbar-expand-md navbar-dark">
                 <div class="container">
+                    <a href="index.html">
                     <img src="./images/cooltext377843177227709.png" class="navbar-logo" alt="salone_logo">
+                    </a>
                     <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
                         <span class="menu-icon-bar"></span>
                         <span class="menu-icon-bar"></span>
@@ -131,9 +133,9 @@
             </div>
         </section>
 
-        <section id="gifvideo">
-        <div class="container-fluid mt-5">
-            <img src="./images/banner-secundario.gif">
+        <section class="gifvideo" class="d-none d-lg-inline"  >
+        <div class="container-fluid mt-5" >
+            <img src="./images/Webp.net-resizeimage.gif">
         </div>
         </section> 
 		</main>
