--- a/reservas.html
+++ b/reservas.html
@@ -50,7 +50,9 @@
         <header class="header-area overlay">
             <nav class="navbar bg-black navbar-expand-md navbar-dark">
                 <div class="container">
-                    <img src="./images/cooltext377843177227709.png" class="navbar-logo" alt="salone_logo">
+                    <a href="index.html">
+                        <img src="./images/cooltext377843177227709.png" class="navbar-logo" alt="salone_logo">
+                    </a>
                     <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
                         <span class="menu-icon-bar"></span>
                         <span class="menu-icon-bar"></span>
