--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             </div>
         </section>
 
-        <section class="gifvideo" class="d-none d-lg-inline"  >
-        <div class="container-fluid mt-5" >
+        <section class="gifvideo">
+        <div class="d-none d-lg-inline" >
             <img src="./images/Webp.net-resizeimage.gif">
         </div>
         </section> 
